release/1.8.1/VERSION.md
# 1.8.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.1```   |
| Release Time   | ```2014-11-24T14:13:31+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```6edd2a3e3d76a7602c52f319f87cf11f7720b43b```   |
| size   | ```7762712```   |
| url       | ```https://launcher.mojang.com/v1/objects/6edd2a3e3d76a7602c52f319f87cf11f7720b43b/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```68bfb524888f7c0ab939025e07e5de08843dac0f```   |
| size   | ```7903505```   |
| url       | ```https://launcher.mojang.com/v1/objects/68bfb524888f7c0ab939025e07e5de08843dac0f/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |