release/1.8.2/VERSION.md
# 1.8.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.2```   |
| Release Time   | ```2015-02-19T15:47:29+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```a8e71f6c81acfa834d249579a242f5b0852075c1```   |
| size   | ```8460686```   |
| url       | ```https://launcher.mojang.com/v1/objects/a8e71f6c81acfa834d249579a242f5b0852075c1/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```a37bdd5210137354ed1bfe3dac0a5b77fe08fe2e```   |
| size   | ```9778127```   |
| url       | ```https://launcher.mojang.com/v1/objects/a37bdd5210137354ed1bfe3dac0a5b77fe08fe2e/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |